--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <button id="add-image-button" class="action-btn">
             <label>
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#ffffff"  stroke-width="1"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M9 12h6" /><path d="M12 9v6" /></svg>
-                <input type="file" id="image-input" hidden />
+                <input accept="image/*" type="file" id="image-input" hidden />
             </label>
         </button>
 
@@ -77,5 +77,7 @@
 <section id="selector-items" class="section-items">
 
 </section>
+
+<script src="module.js"></script>
 </body>
 </html>
